--- a/economia_envelhecimento/notebook.ipynb
+++ b/economia_envelhecimento/notebook.ipynb
@@ -1,1 +1,76 @@
-
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Envelhecimento Populacional e Custos de Vida no Brasil\n",
+        "Projeto de Ciência de Dados - Nilvane Oliveira Rocha\n",
+        "\n",
+        "Este notebook analisa dados reais do IBGE e INSS para entender como o envelhecimento populacional impacta os custos previdenciários e de saúde.\n"
+      ],
+      "metadata": {
+        "id": "4F8mBDSK2d-S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FjZ_kRiv2WOr"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "df = pd.read_csv(\"economia_envelhecimento/dados.csv\")\n",
+        "df.head()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df[[\"Populacao_60+\"]]\n",
+        "y = df[\"Gasto_INSS_R$Bi\"]\n",
+        "\n",
+        "modelo = LinearRegression()\n",
+        "modelo.fit(X, y)\n",
+        "\n",
+        "print(\"Coeficiente:\", modelo.coef_[0])\n",
+        "print(\"Intercepto:\", modelo.intercept_)\n"
+      ],
+      "metadata": {
+        "id": "X7Og3JJT2n4B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prev_2030 = modelo.predict([[18.5]])\n",
+        "print(\"Previsão de gasto INSS em 2030:\", round(prev_2030[0], 2), \"R$ Bi\")\n"
+      ],
+      "metadata": {
+        "id": "hRPgdofO2zIl"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
